test/cases/phase0/error/message-access/input.tsc
const e = new Error("fail")
console.log(e.message)
